--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: Astha Hariyani
-bio: A Man who travels the world eating noodles
+bio: Most Beautiful person on the planet
 
 # twitter summary info
 description: A blog about technology and stuff related
