--- a/_config.yml
+++ b/_config.yml
@@ -42,13 +42,13 @@ instagram: asthahariyani16
 linkedin: asthahariyani
 # youtube: myyoutube
 # spotify: myspotify
-#github: mygithub
+github: asthahariyani
 # gitlab: mygitlab
 # lastfm: mylastfm
 # stackoverflow: 7044681/mystackoverflow
 # quora: userquora
 # reddit: username
-#medium: medium
+# medium: medium
 # vimeo: myvimeo
 # lanyrd: mylanyrd
 email: asthahariyani16@gmail.com
